updated gallery section

--- a/src/index.html
+++ b/src/index.html
@@ -163,9 +163,9 @@
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-3.jpg" alt="Avatar" class="image">
+                           <img src="images/img-16.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="places/srinagar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/haridwar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -225,7 +225,7 @@
                         <div class="container_main">
                            <img src="images/img-9.JPG" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="places/devprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/rudraprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -273,8 +273,8 @@
                   <div class="col-lg-4 col-sm-12 col-md-4">
                      <div class="box_main">
                         <div class="house_icon">
-                           <img src="images/img-7.jpg" class="image_1">
-                           <img src="images/img-7.jpg" class="image_2">
+                           <img src="images/img-8.JPG" class="image_1">
+                           <img src="images/img-8.JPG" class="image_2">
                         </div>
                         <h3 class="decorate_text">DEVPRAYAG</h3>
                         <p class="tation_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
