--- a/src/gallery.html
+++ b/src/gallery.html
@@ -77,7 +77,7 @@
                         <div class="container_main">
                            <img src="images/img-1.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/srinagar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -85,15 +85,15 @@
                         <div class="container_main">
                            <img src="images/img-2.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/srinagar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="/src/images/img-3.jpg" alt="Avatar" class="image">
+                           <img src="images/img-16.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/haridwar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -135,9 +135,9 @@
                   <div class="row">
                      <div class="col-md-4">
                         <div class="container_main">
-                           <img src="images/img-7.jpg" alt="Avatar" class="image">
+                           <img src="images/img-3.jpg" alt="Avatar" class="image">
                            <div class="overlay">
-                              <div class="text"><a href="places/mana.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                              <div class="text"><a href="places/rudraprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
@@ -153,13 +153,98 @@
                         <div class="container_main">
                            <img src="images/img-9.JPG" alt="Avatar" class="image">
                            <div class="overlay">
+                              <div class="text"><a href="places/rudraprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="gallery_section_2">
+                  <div class="row">
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-7.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/mana.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-12.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/pauri.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-15.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
                               <div class="text"><a href="places/devprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                            </div>
                         </div>
                      </div>
                   </div>
                </div>
+               <div class="gallery_section_2">
+                  <div class="row">
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-17.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/haridwar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-13.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/srinagar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-10.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/mana.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="gallery_section_2">
+                  <div class="row">
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-11.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/mana.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-14.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/devprayag.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-4">
+                        <div class="container_main">
+                           <img src="images/img-18.jpg" alt="Avatar" class="image">
+                           <div class="overlay">
+                              <div class="text"><a href="places/haridwar.html"><i class="fa fa-search" aria-hidden="true"></i></a></div>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
             </div>
+
             <div class="seemore_bt"><a href="gallery.html">See More</a></div>
          </div>
       </div>
