adding suggestion to place-pages

--- a/src/places/devprayag.html
+++ b/src/places/devprayag.html
@@ -102,16 +102,16 @@
                   <div class="place_title_main">
                      <div class="place_topics">Suggestion and Instructions</div>
                      <div>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>Witness the Confluence</p>
+                        <p class="place_text"><span class="dot"></span>Relax by the Riverside</p>
+                        <p class="place_text"><span class="dot"></span>Try Local Cuisine</p>
+                        <p class="place_text"><span class="dot"></span>Learn About Local Culture</p>
+                        <p class="place_text"><span class="dot"></span>Respect Local Customs</p>
+                        <p class="place_text"><span class="dot"></span>Stay in Peaceful Accommodation</p>
+                        <p class="place_text"><span class="dot"></span>Explore Chandrabadani Temple</p>
+                        <p class="place_text"><span class="dot"></span>Enjoy Sunrise/Sunset</p>
+                        <p class="place_text"><span class="dot"></span>Visit Suspension Bridges</p>
+                        <p class="place_text"><span class="dot"></span>Road Safety</p>
                      </div>
                   </div>
                </div>
