--- a/src/places/haridwar.html
+++ b/src/places/haridwar.html
@@ -102,16 +102,16 @@
                   <div class="place_title_main">
                     <div class="place_topics">Suggestion and Instructions</div>
                     <div>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>Participate in Ganga Aarti</p>
+                        <p class="place_text"><span class="dot"></span>Dress Modestly</p>
+                        <p class="place_text"><span class="dot"></span>Bathe in the Ganges</p>
+                        <p class="place_text"><span class="dot"></span>Safety on the Streets</p>
+                        <p class="place_text"><span class="dot"></span>Local Festivals and Events</p>
+                        <p class="place_text"><span class="dot"></span>Eat Local Cuisine</p>
+                        <p class="place_text"><span class="dot"></span>Visit Har Ki Pauri</p>
+                        <p class="place_text"><span class="dot"></span>Secure Accommodation</p>
+                        <p class="place_text"><span class="dot"></span>Avoid Risky Activities</p>
+                        <p class="place_text"><span class="dot"></span>Carry Important Documents</p>
                      </div>
                   </div>
                </div>
