--- a/src/places/mana.html
+++ b/src/places/mana.html
@@ -102,16 +102,16 @@
                   <div class="place_title_main">
                     <div class="place_topics">Suggestion and Instructions</div>
                     <div>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>Medical Supplies</p>
+                        <p class="place_text"><span class="dot"></span>Communication and Connectivity</p>
+                        <p class="place_text"><span class="dot"></span>Clothing and Gear</p>
+                        <p class="place_text"><span class="dot"></span>Altitude and Acclimatization</p>
+                        <p class="place_text"><span class="dot"></span>Permits and Documentation</p>
+                        <p class="place_text"><span class="dot"></span>Stay Hydrated</p>
+                        <p class="place_text"><span class="dot"></span>Stay Informed</p>
+                        <p class="place_text"><span class="dot"></span>Safe Trekking Practices</p>
+                        <p class="place_text"><span class="dot"></span>Trek to Vasudhara Falls</p>
+                        <p class="place_text"><span class="dot"></span>Safety Precautions</p>
                     </div>
                   </div>
                </div>
