--- a/src/places/pauri.html
+++ b/src/places/pauri.html
@@ -101,16 +101,15 @@
                   <div class="place_title_main">
                      <div class="place_topics">Suggestion and Instructions</div>
                      <div>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>Experience Local Cuisine</p>
+                        <p class="place_text"><span class="dot"></span>Bird-Watching in Dang Village</p>
+                        <p class="place_text"><span class="dot"></span>Visit Chaukhamba Viewpoint</p>
+                        <p class="place_text"><span class="dot"></span>Engage in Photography</p>
+                        <p class="place_text"><span class="dot"></span>Trek to Tara Kund</p>
+                        <p class="place_text"><span class="dot"></span>Secure Accommodation</p>
+                        <p class="place_text"><span class="dot"></span>Weather Preparedness</p>
+                        <p class="place_text"><span class="dot"></span>Local Customs and Etiquette </p>
+                        <p class="place_text"><span class="dot"></span>Engage with locals to learn about their way of life</p>
                      </div>
                   </div>
                </div>
