--- a/src/places/rudraprayag.html
+++ b/src/places/rudraprayag.html
@@ -102,16 +102,15 @@
                   <div class="place_title_main">
                     <div class="place_topics">Suggestion and Instructions</div>
                     <div>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>Witness the Confluence</p>
+                        <p class="place_text"><span class="dot"></span>Weather Preparedness</p>
+                        <p class="place_text"><span class="dot"></span>Visit Local Markets</p>
+                        <p class="place_text"><span class="dot"></span>Respect Local Customs</p>
+                        <p class="place_text"><span class="dot"></span>Visit Nearby Attractions</p>
+                        <p class="place_text"><span class="dot"></span>Local Festivals and Events</p>
+                        <p class="place_text"><span class="dot"></span>Eat Local Cuisine</p>
+                        <p class="place_text"><span class="dot"></span>Safety on the Streets</p>
+                        <p class="place_text"><span class="dot"></span>Weather Preparedness</p>
                      </div>
                   </div>
                </div>
