--- a/src/places/srinagar.html
+++ b/src/places/srinagar.html
@@ -102,16 +102,16 @@
                   <div class="place_title_main">
                      <div class="place_topics">Suggestion and Instructions</div>
                      <div>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
-                        <p class="place_text"><span class="dot"></span>lskjgk;lds'gjskhl;gsl;gskjg</p>
+                        <p class="place_text"><span class="dot"></span>Photograph the Scenic Beauty</p>
+                        <p class="place_text"><span class="dot"></span>Experience Local Festivals</p>
+                        <p class="place_text"><span class="dot"></span>Discover Temples and Ashrams</p>
+                        <p class="place_text"><span class="dot"></span>Glimpse of Valley of Flowers</p>
+                        <p class="place_text"><span class="dot"></span>Trek to Deoriatal</p>
+                        <p class="place_text"><span class="dot"></span>Stay Informed</p>
+                        <p class="place_text"><span class="dot"></span>Health Precautions</p>
+                        <p class="place_text"><span class="dot"></span>Local Customs and Etiquette</p>
+                        <p class="place_text"><span class="dot"></span>Weather Preparedness</p>
+                        <p class="place_text"><span class="dot"></span>Carry Important Documents</p>
                      </div>
                   </div>
                </div>
