--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                               <h1 class="outstanding_text">Heart Of Uttarakhand</h1>
                               <h1 class="coffee_text">PAURI</h1>
                               <p class="there_text">Adorned in the undisturbed vistas of the beguiling Garhwal Himalayas, lies the city of Pauri. It is enclosed by the thick woodlands and the benevolent snow-clad hills that appear like a silver tiara. </p>
-                              <div class="learnmore_bt"><a href="#">Learn More</a></div>
+                              <div class="learnmore_bt"><a href="places/pauri.html">Learn More</a></div>
                            </div>
                         </div>
                      </div>
@@ -86,7 +86,7 @@
                               <h1 class="outstanding_text">A Historic Town</h1>
                               <h1 class="coffee_text">SRINAGAR</h1>
                               <p class="there_text">The historic town of Srinagar is cradled on the pristine banks of Alaknanda River. It is seated at an average elevation of 560 metres above sea level. The pristine town of Srinagar is an important cultural and educational centre. </p>
-                              <div class="learnmore_bt"><a href="#">Learn More</a></div>
+                              <div class="learnmore_bt"><a href="places/srinagar.html">Learn More</a></div>
                            </div>
                         </div>
                      </div>
@@ -98,7 +98,7 @@
                               <h1 class="outstanding_text">The Town Of Godly Confluence</h1>
                               <h1 class="coffee_text">DEVPRAYAG</h1>
                               <p class="there_text">The celestial town of Devprayag is positioned at an elevation of 830 meters above sea level. Devprayag is the last Prayag or the holy confluence of the Alaknanda River, from here that the confluence of Alaknanda and Bhagirathi River is known as Ganga.</p>
-                              <div class="learnmore_bt"><a href="#">Learn More</a></div>
+                              <div class="learnmore_bt"><a href="places/devprayag.html">Learn More</a></div>
                            </div>
                         </div>
                      </div>
